// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"data" can be used to specify resource data 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "data": Object {
      "boom": 123,
    },
    "kind": "ResourceType",
    "metadata": Object {
      "name": "testresource368fc2ec",
    },
  },
]
`;

exports[`"spec" is synthesized as-is 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "ResourceType",
    "metadata": Object {
      "name": "testresource368fc2ec",
    },
    "spec": Object {
      "prop1": "hello",
      "prop2": Object {
        "world": 123,
      },
    },
  },
]
`;

exports[`if name is explicitly specified it will be respected 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "boom",
    },
  },
]
`;

exports[`minimal configuration 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "testmyresource33fc126f",
    },
  },
]
`;

exports[`synthesized resource name is based on path 1`] = `
Array [
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "testmyresource33fc126f",
    },
  },
  Object {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": Object {
      "name": "testscopemyresourcec364662d",
    },
  },
]
`;
